--- a/fr/film_fr.html
+++ b/fr/film_fr.html
@@ -159,9 +159,9 @@
         <article>
             <h3 class="film_article_texte_tittle">Pour plus d'informations :</h3>
             <p class="film_article_texte_content">Top Gun :</p>
-            <a class="film_article_texte_link" href="https://fr.wikipedia.org/wiki/Top_Gun_(film)">https://fr.wikipedia.org/wiki/Top_Gun_(film)</a>
+            <a class="film_article_texte_link" href="https://fr.wikipedia.org/wiki/Top_Gun_(film)">Wikipédia : Top Gun</a>
             <p class="film_article_texte_content">Top Gun Maverick :</p>
-            <a class="film_article_texte_link" href="https://fr.wikipedia.org/wiki/Top_Gun_:_Maverick">https://fr.wikipedia.org/wiki/Top_Gun_:_Maverick</a>
+            <a class="film_article_texte_link" href="https://fr.wikipedia.org/wiki/Top_Gun_:_Maverick">Wikipédia : Top Gun Maverick</a>
         </article>
 
     </main>
