--- a/fr/lieu_fr.html
+++ b/fr/lieu_fr.html
@@ -80,7 +80,7 @@
             <h3 class="lieu_article_texte_tittle">Pour plus d'informations,</h3>
             <p class="lieu_article_texte_content">Classements des villes vertes en France :</p>
             <div class="lieu_article_texte_link">
-            <a href="https://www.detoursenfrance.fr/patrimoine/patrimoine-urbain/le-classement-des-villes-vertes-en-france-8111">https://www.detoursenfrance.fr/patrimoine/patrimoine-urbain/le-classement-des-villes-vertes-en-france-8111</a>
+            <a href="https://www.detoursenfrance.fr/patrimoine/patrimoine-urbain/le-classement-des-villes-vertes-en-france-8111">Classement villes vertes en France - 2022</a>
             </div>
             
             <p class="lieu_article_texte_content">Article suivant : "Sauvez la planète"</p>
