--- a/fr/livre_fr.html
+++ b/fr/livre_fr.html
@@ -127,7 +127,7 @@
             </div>
             <p class="livre_article_texte_content">État d'urgence, Michael Crichton :</p>
             <div class="livre_article_texte_link">
-            <a href="https://fr.wikipedia.org/wiki/%C3%89tat_d%27urgence_(roman)">https://fr.wikipedia.org/wiki/%C3%89tat_d%27urgence_(roman)</a>
+            <a href="https://fr.wikipedia.org/wiki/%C3%89tat_d%27urgence_(roman)">Wikipédia : État d'urgence (roman)</a>
             </div>
         </article>
     </main>
