Autre projet CSS

--- a/fr/autreprojets_fr.html
+++ b/fr/autreprojets_fr.html
@@ -52,55 +52,81 @@
         <p class="ap_article_intro">Ci-dessous, vous pourrez retrouver tous les autres projets de mon groupe, car oui, je ne suis pas tout seul ! Allez-y faire un tour, vous trouverez sûrement votre bonheur !</p>
 
         <article>
-            <h5 class="ap_article_texte_content_site_tittle">Tengu Road</h5>
+            <div class="ap_article_texte_content_site_tittle">
+            <a class="ap_article_texte_content_site_tittle" href="#" target="_blank">Tengu Road</a>
+            </div>
             <p class="ap_article_texte_content_name">Lucas BARDEY</p>
         </article>
         <article>
-            <h5 class="ap_article_texte_content_site_tittle">Timerproof cybersoul</h5>
+            <div class="ap_article_texte_content_site_tittle">
+            <a class="ap_article_texte_content_site_tittle" href="https://timeproof-cybersoul.zoevicat.fr/fr/" target="_blank">Timerproof cybersoul</a>
+            </div>
             <p class="ap_article_texte_content_name">Zoé VICAT</p>
         </article>
         <article>
-            <h5 class="ap_article_texte_content_site_tittle">Mind_Uploading.exe</h5>
+            <div class="ap_article_texte_content_site_tittle">
+            <a class="ap_article_texte_content_site_tittle" href="https://minduploadingexe.lisa-cingolani.fr/fr/index.html" target="_blank">Mind_Uploading.exe</a>
+            </div>
             <p class="ap_article_texte_content_name">Lisa CINGOLANI</p>
         </article>
         <article>
-            <h5 class="ap_article_texte_content_site_tittle">Discover-e</h5>
+            <div class="ap_article_texte_content_site_tittle">
+            <a class="ap_article_texte_content_site_tittle" href="https://discover-e.lucaschippaux.fr/fr/index.html" target="_blank">Discover-e</a>
+            </div>
             <p class="ap_article_texte_content_name">Lucas CHIPPAUX</p>
         </article>
         <article>
-            <h5 class="ap_article_texte_content_site_tittle">Jibun</h5>
+            <div class="ap_article_texte_content_site_tittle">
+            <a class="ap_article_texte_content_site_tittle" href="https://jibun.eboucard.fr/fr/" target="_blank">Jibun</a>
+            </div>
             <p class="ap_article_texte_content_name">Emilien BOUCARD</p>
         </article>
         <article>
-            <h5 class="ap_article_texte_content_site_tittle">Reminder</h5>
+            <div class="ap_article_texte_content_site_tittle">
+            <a class="ap_article_texte_content_site_tittle" href="#" target="_blank">Reminder</a>
+            </div>
             <p class="ap_article_texte_content_name">Lisa BUGNET</p>
         </article>
         <article>
-            <h5 class="ap_article_texte_content_site_tittle">Dicta</h5>
+            <div class="ap_article_texte_content_site_tittle">
+            <a class="ap_article_texte_content_site_tittle" href="#" target="_blank">Dicta</a>
+            </div>
             <p class="ap_article_texte_content_name">Chloe BIZET</p>
         </article>
         <article>
-            <h5 class="ap_article_texte_content_site_tittle">Sweet Old Times</h5>
+            <div class="ap_article_texte_content_site_tittle">
+            <a class="ap_article_texte_content_site_tittle" href="https://sweet-old-times.jael-amemoutou.fr/" target="_blank">Sweet Old Times</a>
+            </div>
             <p class="ap_article_texte_content_name">Jael AMEMOUTOU</p>
         </article>
         <article>
-            <h5 class="ap_article_texte_content_site_tittle">Mon Nindo</h5>
+            <div class="ap_article_texte_content_site_tittle">
+            <a class="ap_article_texte_content_site_tittle" href="https://mon-nindo.ayrton-chaves.fr/" target="_blank">Mon Nindo</a>
+            </div>
             <p class="ap_article_texte_content_name">Ayrton CHAVES</p>
         </article>
         <article>
-            <h5 class="ap_article_texte_content_site_tittle">Wikipiece</h5>
+            <div class="ap_article_texte_content_site_tittle">
+            <a class="ap_article_texte_content_site_tittle" href="#" target="_blank">Wikipiece</a>
+            </div>
             <p class="ap_article_texte_content_name">Yannis BOREL</p>
         </article>
         <article>
-            <h5 class="ap_article_texte_content_site_tittle">Reverse Footage</h5>
+            <div class="ap_article_texte_content_site_tittle">
+            <a class="ap_article_texte_content_site_tittle" href="https://reversefootage.timeobinda.fr/fr/index.html" target="_blank">Reverse Footage</a>
+            </div>
             <p class="ap_article_texte_content_name">Timéo BINDA</p>
         </article>
         <article>
-            <h5 class="ap_article_texte_content_site_tittle">As Time Flies</h5>
+            <div class="ap_article_texte_content_site_tittle">
+            <a class="ap_article_texte_content_site_tittle" href="#" target="_blank">As Time Flies</a>
+            </div>
             <p class="ap_article_texte_content_name">Dalil HAMMACHI</p>
         </article>
         <article>
-            <h5 class="ap_article_texte_content_site_tittle">Rake over the ashes</h5>
+            <div class="ap_article_texte_content_site_tittle">
+            <a class="ap_article_texte_content_site_tittle" href="#" >Rake over the ashes</a>
+            </div>
             <p class="ap_article_texte_content_name">Alexis BERNARD</p>
         </article>
     </main>
