--- a/fr/livre_fr.html
+++ b/fr/livre_fr.html
@@ -19,7 +19,7 @@
                 <div class="nav_toogle_bar"></div>
             </div>
         </div>
-        <a class="language_header_fr" href="./en/index_en.html">
+        <a class="language_header_fr" href="/en/book_en.html">
             <img src="/public/icone/Boutton_Language-fr.svg" alt="Bouton changement de langue FR->EN">
         </a>
         <h2 class="btb_header_fr">Back To Back</h2>
@@ -49,11 +49,7 @@
         </nav>
     </header>
     <main>
-        <p class="livre_article_intro">
-        Il existe de nombreux romans qui racontent des histoires sur le climat,
-        l'environnment, l'écologie et les combats pour défendre ses différents termes.
-        Parmi ses romans, un seul a retenu notre attention, c'est État d'urgence de Michael Crichton !
-        </p>
+        <p class="livre_article_intro">Il existe de nombreux romans qui racontent des histoires sur le climat, l'environnment, l'écologie et les combats pour défendre ses différents termes. Parmi ses romans, un seul a retenu notre attention, c'est État d'urgence de Michael Crichton !</p>
         <img class="livre_article_image_primary" src="../public/img/Image_état_d'urgence.webp" alt="Couverture du livre État d'urgence">
         
         <article>
